[package]
name = "bevy_prototype_audio_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
knyst = { version = "0.2", features = ["cpal"] }
symphonia = "0.5"

[dependencies.bevy]
version = "0.9"
default-features = false
features = ["bevy_asset"]

[dev-dependencies.bevy]
# git = "https://github.com/bevyengine/bevy.git"
version = "0.9"
default-features = false
features = [
  "render",
  "animation",
  "bevy_winit",
  "bevy_gilrs",
  "bevy_asset",
  "filesystem_watcher",
  "x11"
]